Fix the alignment

--- a/app.css
+++ b/app.css
@@ -472,7 +472,7 @@ div.rotate-text-1 {
   width: 36rem;
   height: 28px;
   font-family: sf-medium;
-  margin: -1rem 0 0 0;
+  margin: 3rem 0 0 0;
   font-size: 24px;
   font-weight: normal;
   font-stretch: normal;
@@ -487,7 +487,7 @@ div.rotate-text-1 {
   height: 40px;
   font-family: product-sans-regular;
   font-size: 48px;
-  margin: 14rem 0 0 0;
+  margin: 1rem 0 0 0;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
